--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <div class="project-name">Hex Harmonia</div>
                 <a href="works.html#hex">
                     <div class="project-description">
-                        <p><br>Hex Harmonia is a 3D puzzle games that character need to resolve all the puzzles in the
+                        <p><br><b>Hex Harmonia</b> is a 3D puzzle games that character need to resolve all the puzzles in the
                             hexagon
                             to escape from the room. There are six different types of puzzles in this game. </p>
                     </div>
@@ -65,7 +65,7 @@
                 <div class="project-name">School Spirits</div>
                 <a href="works.html#school">
                     <div class="project-description">
-                        <p><br>School Spirit is a 2D Turn-based RPG game. Use your instruments and summon your Yokai buddies to fight
+                        <p><br><b>School Spirit</b> is a 2D Turn-based RPG game. Use your instruments and summon your Yokai buddies to fight
                             against the enemy.</p>
                     </div>
                 </a>
@@ -75,7 +75,7 @@
                 <div class="project-name">Turtles All The Way Down</div>
                 <a href="works.html#turtle">
                     <div class="project-description">
-                        <p><br>Turtles All the Way Down is a Turtle snowboarding game, featuring wrap around space.
+                        <p><br><b>Turtles All the Way Down</b> is a Turtle snowboarding game, featuring wrap around space.
                             Follow old trails and create new ones inline to collecting all the gems.</p>
                     </div>
                 </a>
@@ -85,7 +85,7 @@
                 <div class="project-name">Dodgy Dice</div>
                 <a href="works.html#dice">
                     <div class="project-description">
-                        <p><br>Dodgy Dice is a top down, vampire-survivor-like bullet hell where the character is a
+                        <p><br><b>Dodgy Dice</b> is a top down, vampire-survivor-like bullet hell where the character is a
                             multi sided die.
                             Each time a die is rolled, a number is generated and used to fuel various behaviors of the
                             game.</p>
@@ -97,7 +97,7 @@
                 <div class="project-name">Where is My Body</div>
                 <a href="works.html#body">
                     <div class="project-description">
-                        <p><br>Where is my body is a 2D Endless runner game that the character is a ghost trying to find
+                        <p><br><b>Where is my body</b> is a 2D Endless runner game that the character is a ghost trying to find
                             its body.
                             The ghost has to avoid the obstacles on its way by jumping.</p>
                     </div>
@@ -107,7 +107,7 @@
                 <div class="project-name">DreamChaser</div>
                 <a href="works.html#dream">
                     <div class="project-description">
-                        <p><br>DreamChaser is a puzzle platformer in which a character would have to go through several
+                        <p><br><b>DreamChaser</b> is a puzzle platformer in which a character would have to go through several
                             dreams in order to retrieve their memories.
                             There will be different challenges in each levels.</p>
                     </div>
@@ -117,7 +117,7 @@
                 <div class="project-name">Killer Whale</div>
                 <a href="works.html#whale">
                     <div class="project-description">
-                        <p><br>Killer Whale is an interactive novels that telling a story about a girl who has been
+                        <p><br><b>Killer Whale</b> is an interactive novels that telling a story about a girl who has been
                             swallowed by
                             a killer whale and found a lot of mysteries waiting for her to resolve.</p>
                     </div>
@@ -131,7 +131,7 @@
                 <div class="project-name">Ace Attorney Game Poster</div>
                 <a href="works.html#poster">
                     <div class="project-description">
-                        <p><br>Ace Attorney Game Poster is an Interactive Poster derived from Ace Attorney games.</p>
+                        <p><br><b>Ace Attorney Game Poster</b> is an Interactive Poster derived from Ace Attorney games.</p>
                     </div>
                 </a>
             </div>
