--- a/works.html
+++ b/works.html
@@ -195,7 +195,7 @@
             <p> April 2022 ~ June 2022</p>
             <li><b>CMPM 120: Game Development Experience</b> project </li>
             <h3>DreamChaser - Full Walkthrough</h3>
-            <iframe wsrc="https://www.youtube.com/embed/jPh8JDKGbb4"
+            <iframe src="https://www.youtube.com/embed/jPh8JDKGbb4"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
