--- a/works.html
+++ b/works.html
@@ -145,6 +145,7 @@
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
             <h2>My contribution to <i>Dodgy Dice</i></h2>
+            <li>Developed with Godot and GDscript.</li>
             <li>Brainstormed, desigend and finished the whole game within 48 hours with another 10 group memebers.</li>
             <li>I was responsible for dice randomnizing, dice spawning, and UI/Menu code.</li>
             <li>I worked closely as programmers iterating through gameplay features and build mechanics.</li>
