--- a/works.html
+++ b/works.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="works.css">
+    <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,23 +15,19 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>My Works</title>
     <link rel="icon" type="image/x-icon" href="website-icon.png">
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"
+        integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous">
+    </script>
+    <script>
+        $(function () {
+            $('#header').load("header.html");
+            $('#footer').load("footer.html");
+        });
+    </script>
 </head>
 
 <body>
-    <section class="header">
-        <nav>
-            <img src="images/avatar.png" width="120" height="120">
-            <img src="images/name.gif" width="200" height="200">
-            <div class="nav-links" id="navLinks">
-                <ul>
-                    <li><a href="index.html"> HOME </a></li>
-                    <!-- <li><a href="about.html"> ABOUT </a></li> -->
-                    <li><a href="works.html"> WORKS </a></li>
-                    <!-- <li><a href="cv.html"> CV/Résumé </a></li> -->
-                </ul>
-            </div>
-        </nav>
-    </section>
+    <div id="header"></div>
 
     <section class="projects">
         <h4> Game Projects</h4>
@@ -315,7 +312,7 @@
                     File</a></p>
         </div>
     </section>
-
+    <div id="footer"></div>
 </body>
 
 </html>
