--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     </script>
 
     <link rel="icon" type="image/x-icon" href="website-icon.png">
-    <link href="style.css" rel="stylesheet" type="text/css" />
-    <link href="index.css" rel="stylesheet" type="text/css" />
+    <link href="style.css" rel="stylesheet" type="text/css" href=“style.css”/>
+    <link href="index.css" rel="stylesheet" type="text/css" href=“index.css”/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
