--- a/header.html
+++ b/header.html
@@ -6,9 +6,9 @@
         <div class="nav-links" id="navLinks">
             <i class="fa fa-times-circle" onclick="hideMenu()"></i>
             <ul>
-                <li><a href="index.html"> HOME </a></li>
-                <!-- <li><a href="about.html"> ABOUT </a></li> -->
-                <li><a href="works.html"> WORKS </a></li>
+                <!-- <li><a href="index.html"> HOME </a></li> -->
+                <li><a href="about.html"> ABOUT </a></li>
+                <li><a href="index.html"> WORKS </a></li>
                 <!-- <li><a href="cv.html"> CV/Résumé </a></li> -->
             </ul>
         </div>
