Updated font size of project description

--- a/index.html
+++ b/index.html
@@ -107,8 +107,7 @@
                 <div class="project-description">
                     <div class="text">
                         <b>DreamChaser</b> is a puzzle platformer in which a character would have to go through several
-                        dreams in order to retrieve their memories.
-                        There will be different challenges in each levels
+                        dreams in order to retrieve their memories. There will be different challenges in each levels
                     </div>
                 </div>
                 <a href="DreamChaser.html"><img src="images/Dreamchaser.png" style="width:100%" class="image"></a>
@@ -121,7 +120,7 @@
             <div class="projects-col">
                 <div class="project-description">
                     <div class="text">
-                        <b>Ace Attorney Game Poster</b> is an Interactive Poster inspired by Ace Attorney Series
+                        <b>Ace Attorney Game Poster</b> is an Interactive Poster inspired by Ace Attorney series
                     </div>
                 </div>
                 <a href="AceAttorneyPoster.html"><img src="images/hat.png" style="width:100%" class="image"></a>
