--- a/HexHarmonia.html
+++ b/HexHarmonia.html
@@ -28,10 +28,27 @@
 
 <body>
     <div id="header"></div>
+
+
     <section class="projects">
+        
+        <div class="project-title">
+            <h1 id="project-title"> Hex Harmonia (2022)</h1>
+            <div class="interactive">
+                <a href="https://gun-jumpers.itch.io/hex-harmonia" target="_blank" rel="noopener noreferrer"
+                    class="btn_2"> Play Now</a>
+                <i class="fa fa-github" id="icon" onclick="location.href = 'https://github.com/GunJumpers/JamOne'"
+                    target="_blank" rel="noopener noreferrer" style="cursor:pointer" title="source code"></i>
+
+            </div>
+            <b>CMPM 170: Game Design Studio I</b> project <br>
+        </div>
+
+        <!-- description -->
+
         <div class="title">
             <div class="cover">
-                <video autoplay l>
+                <video autoplay loop controls>
                     <source src="video/hex.mp4" type="video/mp4">
                 </video>
 
@@ -44,24 +61,12 @@
                     <img src="images/hsc4.png">
                 </div>
             </div>
-            <div class="description">
-
-                <h1 id="project-title"> Hex Harmonia (2022)</h1>
-
-                <div class="interactive">
-                    <a href="https://gun-jumpers.itch.io/hex-harmonia" target="_blank" rel="noopener noreferrer"
-                        class="btn_2"> Play Now</a>
-                    <i class="fa fa-github" id="icon" onclick="location.href = 'https://github.com/GunJumpers/JamOne'"
-                        target="_blank" rel="noopener noreferrer" style="cursor:pointer" title="source code"></i>
-                </div>
-                <!-- description -->
-                <b>CMPM 170: Game Design Studio I</b> project <br>
-                <p>
+            <div class="game-info">
+                <div class="description">
                     <b>Hex Harmonia</b> is a 3D puzzle games that player needs to resolve all the puzzles in the
-                    hexagon to escape from the room. There are six unique puzzle rooms waiting for you.
-                </p>
-
-
+                        hexagon to escape from the room. There are six unique puzzle rooms waiting for you.
+    
+                </div>
                 <div class="contribution">
                     <h2 id="project-title">My contribution</h2>
                     <li>Worked with a team of 9 developers in CMPM 170 to create a 3D puzzle game.</li>
@@ -71,8 +76,6 @@
                     <li>Coordianted with sound artists during developing to make sure we were at the same page.</li>
                 </div>
             </div>
-
-
 
         </div>
 
