--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
     <title>Yiyang Lu's Portfolio</title>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"
         integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous">
@@ -15,15 +17,16 @@
         });
     </script>
 
-    <link rel="icon" type="image/x-icon" href="website-icon.png">
-    <link href="style.css" rel="stylesheet" type="text/css" href=“style.css”/>
-    <link href="index.css" rel="stylesheet" type="text/css" href=“index.css”/>
+    <link rel="icon" type="image/x-icon" href="image/website-icon.png">
+    <link href="style.css" rel="stylesheet" type="text/css" href=“css/style.css”/>
+    <link href="index.css" rel="stylesheet" type="text/css" href=“css/index.css”/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@300;400&family=Montserrat:ital,wght@0,300;1,300&family=Silkscreen:wght@400;700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -39,19 +42,34 @@
     <!--Games-->
     <section class="games">
         <div class="introductions">
-            <h1><a id="work"> My Works</a></h1>
-            <p><a href="https://yiyang-lu.itch.io/">itch.o page</a></p>
+            <h1><a id="work"> My Projects</a></h1>
+            <p>All the projects I've worked on!</a></p>
         </div>
 
-        <h2> Projects</h2>
+        <h2> Collaborated Projects</h2>
         <div class="row">
+            
+            <div class="projects-col">
+                <div class="project-description">
+                    <div class="text">
+                        
+                        <!-- <b>Dracomaton</b> is a a top-down roguelike bullet hell where you can switch forms and
+                         mod weapons to build up their power with extra effects to survive -->
+                    </div>
+
+                </div>
+                <a href="Dracomaton.html"><img src="images/dracomaton.png" style="width:100%" class="image"></a>
+                <div class="tags">
+                    <p class="tag1"> c# </p>
+                    <p class="tag2"> Unity</p>
+                </div>
+            </div>
 
             <div class="projects-col">
                 <div class="project-description">
                     <div class="text">
-                        <b>Hex Harmonia</b> is a 3D puzzle games that character need to resolve all the puzzles in the
-                        hexagon
-                        to escape from the room. There are six different types of puzzles in this game
+                        <b>Hex Harmonia</b> is a 3D puzzle game which contains various kinds of puzzles. Resolve
+                        all the puzzles and escaping from this big hexagon room!
                     </div>
 
                 </div>
@@ -73,8 +91,8 @@
             <div class="projects-col">
                 <div class="project-description">
                     <div class="text">
-                        <b>Turtles All the Way Down</b> is a Turtle snowboarding game, featuring wrap around space.
-                        Follow old trails and create new ones inline to collecting all the gems
+                        <b>Turtles All the Way Down</b> is a 3D Endless Runner game.
+                        Collect as many gems as you can!
                     </div>
                 </div>
                 <a href="TurtleAllTheWayDown.html"><img src="images/tsc1.png" style="width:100%" class="image"></a>
@@ -83,7 +101,7 @@
             <div class="projects-col">
                 <div class="project-description">
                     <div class="text">
-                        <b>Dodgy Dice</b> is a top down, vampire-survivor-like bullet hell where the character is a
+                        <b>Dodgy Dice</b> is a 2D Top down, vampire-survivor-like bullet hell where the character is a
                         multi sided die.
                         Each time a die is rolled, a number is generated and used to fuel various behaviors of the
                         game
@@ -115,7 +133,7 @@
 
         </div>
 
-        <h2>Designs</h2>
+        <h2>Individual Projects</h2>
         <div class="row">
             <div class="projects-col">
                 <div class="project-description">
