--- a/Dracomaton.html
+++ b/Dracomaton.html
@@ -81,11 +81,11 @@
                     To resolve those problems, I have used Unity’s <b>ScriptableObjects</b> to create a base class: <b>BaseItem</b>, which all the future items can inherit from. Each base item has its own info such as id, icon, and Item Stats Mods & Item Status Mods are the part that takes care of item’s unique effect. The way it works is that when the Apply function in base item script get called, it will add all the mods(aka. effects) to its host damage source/damageable, mostly player.<br>
                     <!-- <img src="images/dc1.jpg"> -->
                     Considering that designers will collaborate on items throughout the development, I created a designer-friendly system so they can easily test and tweak the item strength during the test by simply changing the attributes on the inspector.
-                    <li>Worked with a team of 9 developers in CMPM 170 to create a 3D puzzle game.</li>
+                    <!-- <li>Worked with a team of 9 developers in CMPM 170 to create a 3D puzzle game.</li>
                     <li>Used Unity, C#, and GitHub throughout the development.</li>
                     <li>Developed scripted game events of two puzzle rooms and 3D player controller.</li>
                     <li>Designed and implemented one puzzle room (raccoon rhythm puzzle room).</li>
-                    <li>Coordianted with sound artists during developing to make sure we were at the same page.</li>
+                    <li>Coordianted with sound artists during developing to make sure we were at the same page.</li> -->
                 </div>
             </div>
 
