--- a/Dracomaton.html
+++ b/Dracomaton.html
@@ -73,7 +73,7 @@
 
                 </div>
                 <div class="contribution">
-                    <h2 id="project-title">What part did you do? </h2>
+                    <h2 id="project-title">What part did I do? </h2>
                      
                     <li>Item System/Item: </li>
                     In Dracomaton, an item is an object that can have negative or positive effects on player which adds a lot of variances to gameplay.<br>
