--- a/Dracomaton.html
+++ b/Dracomaton.html
@@ -69,25 +69,43 @@
             <div class="game-info">
                 <div class="description">
                     <b>Dracomaton</b> is a top-down roguelike bullet hell where you swap between multiple playstyles on the fly. 
-                    Equip yourself with various Forms that have different strengths and weaknesses, OR Mod existing Forms with the characteristics of other ones!
+                    Equip yourself with various Forms that have different strengths and weaknesses, or Mod existing Forms with the characteristics of other ones!
 
                 </div>
                 <div class="contribution">
                     <h2 id="project-title">What part did I do? </h2>
                      
-                    <li>Item System/Item: </li>
-                    In Dracomaton, an item is an object that can have negative or positive effects on player which adds a lot of variances to gameplay.<br>
-                    <img src="images/ItemOverview.png"><br>
-                    I was responsible for initializing the framework of item system, including how to create a new item; how to make each item has its unique effect; how to apply item’s effect to player etc.<br>
-                    To resolve those problems, I have used Unity’s <b>ScriptableObjects</b> to create a base class: <b>BaseItem</b>, which all the future items can inherit from. Each base item has its own info such as id, icon, and Item Stats Mods & Item Status Mods are the part that takes care of item’s unique effect. The way it works is that when the Apply function in base item script get called, it will add all the mods(aka. effects) to its host damage source/damageable, mostly player.<br>
-                    <img src="images/ItemCode.png"><br>
-                    Considering that designers will collaborate on items throughout the development, I created a designer-friendly system so they can easily test and tweak the item strength during the test by simply changing the attributes on the inspector.<br>
-                    <img src="images/ItemInspector.png"><br>
-                    <!-- <li>Worked with a team of 9 developers in CMPM 170 to create a 3D puzzle game.</li>
-                    <li>Used Unity, C#, and GitHub throughout the development.</li>
-                    <li>Developed scripted game events of two puzzle rooms and 3D player controller.</li>
-                    <li>Designed and implemented one puzzle room (raccoon rhythm puzzle room).</li>
-                    <li>Coordianted with sound artists during developing to make sure we were at the same page.</li> -->
+                    <li onclick="hideBlock('item')" style="cursor:pointer">Item System/Item  </li>
+                    <div id="item" style="display: none;">
+                        In Dracomaton, an item is an object that can have negative or positive effects on player which adds a lot of variances to gameplay.<br>
+                        <img src="images/ItemOverview.png"><br>
+                        I was responsible for initializing the framework of item system, including how to create a new item; how to make each item has its unique effect; how to apply item’s effect to player etc.<br>
+                        To resolve those problems, I have used Unity’s <b>ScriptableObjects</b> to create a base class: <b>BaseItem</b>, which all the future items can inherit from. Each base item has its own info such as id, icon, and Item Stats Mods & Item Status Mods are the part that takes care of item’s unique effect. The way it works is that when the Apply function in base item script get called, it will add all the mods(aka. effects) to its host damage source/damageable, mostly player.<br>
+                        <img src="images/ItemCode.png"><br>
+                        Considering that designers will collaborate on items throughout the development, I created a designer-friendly system so they can easily test and tweak the item strength during the test by simply changing the attributes on the inspector.<br>
+                        <img src="images/ItemInspector.png"><br>
+                    </div>
+                    <li onclick="hideBlock('resources')" style="cursor:pointer">Resources Management System (Rewards, Shops)  </li>
+                    <div id="resources" style="display: none;">
+                        Another two crucial system I was responsible for is the rewards system and shop system which handles spawning game items on a specific position for players.<br>
+
+For the reward system,  In Dracomaton, players will get different rewards (Items, Forms etc.) based on the room they entered and finished, for example, clearing a health room will reward players health portion. Various room types will emerge in the game loop as the game progresses. Therefore, I created a resource management system to organize all the rewards/resources in the game to work as a general helper function, including every type of resource, such as UI icons, Damage Text, and even VFX.<br>
+
+To explain how the resource management system works, the ResourcesManager.cs is a singleton class that fetches resource objects (prefabs) from the project folders to separate lists when awake. For code clarity, I used a partial class, which allows each resource type to have its own manager to make the code more readable and generate a random object more easily by just calling the function in the corresponding manager-script. Since each manager script is individual, programmers can create many single manager scripts without complicated primary resources manager script.<br>
+
+For the shop system, I was responsible for offering three shop items (mostly the same object as rewards)  in the shop room for players. One of the three items is always a Health portion for game balance reason and the other two can be randomly chosen from any possible objects. The way i fulfill these is by making a shop item position prefab that has been preset a spawning method, which allows it to be easily moved to any position on the screen and it is. For example, if the item type is Random, it means this position will spawn a random item, otherwise, it will only spawn the selected type of item.  Once the shop room is awake, the shop room manager will populate three shop item positions in the game.
+
+                    </div>
+                    <li onclick="hideBlock('mod')" style="cursor:pointer">Mod Menu UI  </li>
+                    <div id="mod" style="display: none;">
+                        In Dracomaton, an item is an object that can have negative or positive effects on player which adds a lot of variances to gameplay.<br>
+                        <img src="images/ItemOverview.png"><br>
+                        I was responsible for initializing the framework of item system, including how to create a new item; how to make each item has its unique effect; how to apply item’s effect to player etc.<br>
+                        To resolve those problems, I have used Unity’s <b>ScriptableObjects</b> to create a base class: <b>BaseItem</b>, which all the future items can inherit from. Each base item has its own info such as id, icon, and Item Stats Mods & Item Status Mods are the part that takes care of item’s unique effect. The way it works is that when the Apply function in base item script get called, it will add all the mods(aka. effects) to its host damage source/damageable, mostly player.<br>
+                        <img src="images/ItemCode.png"><br>
+                        Considering that designers will collaborate on items throughout the development, I created a designer-friendly system so they can easily test and tweak the item strength during the test by simply changing the attributes on the inspector.<br>
+                        <img src="images/ItemInspector.png"><br>
+                    </div>
                 </div>
             </div>
 
@@ -104,6 +122,18 @@
     </div> -->
 
     </section>
+
+    <script>
+        function hideBlock(id ) {
+          var x = document.getElementById(id);
+          if (x.style.display === "none") {
+            x.style.display = "block";
+          } else {
+            x.style.display = "none";
+          }
+        }
+        </script>
+    
     <div id="footer"></div>
 </body>
 
