--- a/about.html
+++ b/about.html
@@ -17,6 +17,7 @@
 
     <link rel="icon" type="image/x-icon" href="website-icon.png">
     <link href="style.css" rel="stylesheet" type="text/css" href=“style.css”/>
+    <link href="about.css" rel="stylesheet" type="text/css" href=“about.css”/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -29,9 +30,11 @@
     <div id="header"></div>
 
     <section class = "about">
-        <h1 >About Me</h1>
-            <p>Hi! My name is Yiyang Lu. I'm currently a fourth year Computer Science: Game Design student in UCSC.
-                I'm passionate about games from all aspects. 
+        <h1 >About Me </h1>
+            <p>Hi everyone, I'm Yiyang Lu! I just achieved a bachelor's degree in Computer Science: Game Design this June, and I am continuing to pursue my Master's degree in Game and Playable Media at UCSC Silicon Valley Extension right now. I have worked on several school projects as a game programmer on different game engines and enjoy collaborating with people. I look forward to working in a professional game development environment to fulfill my dream of contributing to the video game industry.<br>
+                
+
+                Fun fact about me: my favorite game genre is visual novel and JRPG. :D
             </p>
     </section>
     <div id="footer"></div>
