--- a/Dracomaton.html
+++ b/Dracomaton.html
@@ -65,6 +65,7 @@
                     <img src="images/dc4.jpg">
                     <img src="images/dc5.jpg">
                 </div>
+                
             </div>
             <div class="game-info">
                 <div class="description">
@@ -98,13 +99,10 @@ For the shop system, I was responsible for offering three shop items (mostly the
                     </div>
                     <li onclick="hideBlock('mod')" style="cursor:pointer">Mod Menu UI  </li>
                     <div id="mod" style="display: none;">
-                        In Dracomaton, an item is an object that can have negative or positive effects on player which adds a lot of variances to gameplay.<br>
-                        <img src="images/ItemOverview.png"><br>
-                        I was responsible for initializing the framework of item system, including how to create a new item; how to make each item has its unique effect; how to apply item’s effect to player etc.<br>
-                        To resolve those problems, I have used Unity’s <b>ScriptableObjects</b> to create a base class: <b>BaseItem</b>, which all the future items can inherit from. Each base item has its own info such as id, icon, and Item Stats Mods & Item Status Mods are the part that takes care of item’s unique effect. The way it works is that when the Apply function in base item script get called, it will add all the mods(aka. effects) to its host damage source/damageable, mostly player.<br>
-                        <img src="images/ItemCode.png"><br>
-                        Considering that designers will collaborate on items throughout the development, I created a designer-friendly system so they can easily test and tweak the item strength during the test by simply changing the attributes on the inspector.<br>
-                        <img src="images/ItemInspector.png"><br>
+                        Mod Menu is the crucial game UI in Dracomaton. There are two types of slots in the game: the upper slots are Form slots, and the lower slots are Mods slots. The mechanics of Dracomaton is that players can switch the form and mod by swapping their positions. For example, if players drag Fire Form to the () Form’s mod slot, the code will automatically unequip  Fire Form and turn it into ()Form’s mod. <br>
+
+                        I created the mod menu functions from scratch, including implementing UI assets, implementing functions, and connecting UI with backend codes.
+                        
                     </div>
                 </div>
             </div>
