--- a/Dracomaton.html
+++ b/Dracomaton.html
@@ -99,8 +99,8 @@ For the shop system, I was responsible for offering three shop items (mostly the
                     </div>
                     <li onclick="hideBlock('mod')" style="cursor:pointer">Mod Menu UI  </li>
                     <div id="mod" style="display: none;">
-                        Mod Menu is the crucial game UI in Dracomaton. There are two types of slots in the game: the upper slots are Form slots, and the lower slots are Mods slots. The mechanics of Dracomaton is that players can switch the form and mod by swapping their positions. For example, if players drag Fire Form to the () Form’s mod slot, the code will automatically unequip  Fire Form and turn it into ()Form’s mod. <br>
-
+                        Mod Menu is the crucial game UI in Dracomaton. There are two types of slots in the game: the upper slots are Form slots, and the lower slots are Mods slots. The mechanics of Dracomaton is that players can switch the form and mod by swapping their positions. For example, if players drag Fire Form to the Construct Form’s mod slot, the code will automatically unequip  Fire Form and turn it into Construct Form’s mod. <br>
+                        <img src="images/dc6.gif"><br>
                         I created the mod menu functions from scratch, including implementing UI assets, implementing functions, and connecting UI with backend codes.
                         
                     </div>
