--- a/index.html
+++ b/index.html
@@ -60,8 +60,9 @@
                 </div>
                 <a href="Dracomaton.html"><img src="images/dracomaton.png" style="width:100%" class="image"></a>
                 <div class="tags">
-                    <p class="tag1"> c# </p>
+                    <p class="tag1"> C# </p>
                     <p class="tag2"> Unity</p>
+                    <p class="tag3"> 2D</p>
                 </div>
             </div>
 
@@ -74,6 +75,11 @@
 
                 </div>
                 <a href="HexHarmonia.html"><img src="images/hex.png" style="width:100%" class="image"></a>
+                <div class="tags">
+                    <p class="tag1"> C# </p>
+                    <p class="tag2"> Unity</p>
+                    <p class="tag3"> 3D</p>
+                </div>
             </div>
 
             <div class="projects-col">
@@ -86,6 +92,11 @@
                     </div>
                 </div>
                 <a href="SchoolSpirit.html"><img src="images/school_spirits.png" style="width:100%" class="image"></a>
+                <div class="tags">
+                    <p class="tag1"> C# </p>
+                    <p class="tag2"> Unity</p>
+                    <p class="tag3"> 2D</p>
+                </div>
             </div>
 
             <div class="projects-col">
@@ -96,6 +107,11 @@
                     </div>
                 </div>
                 <a href="TurtleAllTheWayDown.html"><img src="images/tsc1.png" style="width:100%" class="image"></a>
+                <div class="tags">
+                    <p class="tag1"> C# </p>
+                    <p class="tag2"> Unity</p>
+                    <p class="tag3"> 3D</p>
+                </div>
             </div>
 
             <div class="projects-col">
@@ -108,6 +124,11 @@
                     </div>
                 </div>
                 <a href="DodgyDice.html"><img src="images/dogy_4.png" style="width:100%" class="image"></a>
+                <div class="tags">
+                    <p class="tag1"> GDScript </p>
+                    <p class="tag2"> Godot</p>
+                    <p class="tag3"> 2D</p>
+                </div>
             </div>
 
             <div class="projects-col">
@@ -119,6 +140,11 @@
                     </div>
                 </div>
                 <a href="WhereIsMyBody.html"><img src="images/body.gif" style="width:100%" class="image"></a>
+                <div class="tags">
+                    <p class="tag1"> JavaScript </p>
+                    <p class="tag2"> Phaser3</p>
+                    <p class="tag3"> 2D</p>
+                </div>
             </div>
 
             <div class="projects-col">
@@ -129,6 +155,11 @@
                     </div>
                 </div>
                 <a href="DreamChaser.html"><img src="images/Dreamchaser.png" style="width:100%" class="image"></a>
+                <div class="tags">
+                    <p class="tag1"> JavaScript </p>
+                    <p class="tag2"> Phaser3</p>
+                    <p class="tag3"> 2D</p>
+                </div>
             </div>
 
         </div>
@@ -142,6 +173,11 @@
                     </div>
                 </div>
                 <a href="AceAttorneyPoster.html"><img src="images/hat.png" style="width:100%" class="image"></a>
+                <div class="tags">
+                    <p class="tag1"> HTML/CSS</p>
+                    <p class="tag2"> Twine</p>
+                    <p class="tag3"> 2D</p>
+                </div>
             </div>
 
             <div class="projects-col">
@@ -151,6 +187,11 @@
                     </div>
                 </div>
                 <a href="AceAttorneyShooting.html"><img src="images/acscover.png" style="width:100%" class="image"></a>
+                <div class="tags">
+                    <p class="tag1"> JavaScript</p>
+                    <p class="tag2"> Phaser3</p>
+                    <p class="tag3"> 2D</p>
+                </div>
             </div>
 
             <div class="projects-col">
@@ -161,6 +202,12 @@
                     </div>
                 </div>
                 <a href="KillerWhale.html"><img src="images/whale.jpg" style="width:100%" class="image"></a>
+                <div class="tags">
+                    <p class="tag2"> Twine</p>
+                    <p class="tag3"> 2D</p>
+                </div>
+
+                
             </div>
             <!-- <div class="projects-col">
                 <div class="project-description">
@@ -170,6 +217,20 @@
                 </div>
                 <a href="works.html"><img src="images/Aboutart 1.png" style="width:100%" class="image"></a>
             </div> -->
+        </div>
+        <h2>UI/UX Projects</h2>
+        <div class="row">
+            <div class="projects-col">
+                <div class="project-description">
+                    <div class="text">
+                        <b>About Art</b> is an online resources app UI design prototype
+                    </div>
+                </div>
+                <a href="AboutArt.html"><img src="images/Aboutart 1.png" style="width:100%" class="image"></a>
+                <div class="tags">
+                    <p class="tag2"> Figma</p>
+                </div>
+            </div>
         </div>
     </section>
 
