added drop down icon

--- a/Dracomaton.html
+++ b/Dracomaton.html
@@ -78,7 +78,7 @@
                 <div class="contribution">
                     <h2 id="project-title">What part did I do? </h2>
 
-                    <li onclick="hideBlock('item')" style="cursor:pointer">Item System/Item </li>
+                    <li >Item System/Item <i class= "fa fa-caret-down" onclick="hideBlock('item')" style="cursor:pointer"></i> </li>
                     <div id="item" style="display: none;">
                         In Dracomaton, an item is an object that can have negative or positive effects on player which
                         adds a lot of variances to gameplay.<br>
@@ -97,8 +97,8 @@
                         simply changing the attributes on the inspector.<br>
                         <img src="images/ItemInspector.png"><br>
                     </div>
-                    <li onclick="hideBlock('resources')" style="cursor:pointer">Resources Management System (Rewards,
-                        Shops) </li>
+                    <li >Resources Management System (Rewards,
+                        Shops) <i class= "fa fa-caret-down" onclick="hideBlock('resources')" style="cursor:pointer"></i></li>
                     <div id="resources" style="display: none;">
 
                         In Dracomaton, random objects need to be spawned on the map under different situations, for
@@ -155,7 +155,7 @@
                         <img src="images/shopItem.png"> <img src="images/shopItem1.png"> <br>
 
                     </div>
-                    <li onclick="hideBlock('mod')" style="cursor:pointer"> UI </li>
+                    <li > UI <i class= "fa fa-caret-down" onclick="hideBlock('mod')" style="cursor:pointer"></i></li>
                     <div id="mod" style="display: none;">
 
                         <h2> Mod Menu </h2>
