--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
             <p>Hi everyone, I'm Yiyang Lu! I just achieved a bachelor's degree in Computer Science: Game Design this June, and I am continuing to pursue my Master's degree in Game and Playable Media at UCSC Silicon Valley Extension right now. I have worked on several school projects as a game programmer on different game engines and enjoy collaborating with people. I look forward to working in a professional game development environment to fulfill my dream of contributing to the video game industry.<br>
                 
 
-                Fun fact about me: my favorite game genre is visual novel and JRPG. :D
+                Fun fact about me: I can bake very delicious cookies :D<br>
             </p>
     </section>
     <div id="footer"></div>
